Updated links to reflect domain change

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- <a href="https://www.seek.com.au/profile/sean-anderson-Tr33gfDwZF" target="_blank">
         <img class="w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/seek.png" alt="seek-link">
     </a> -->
-    <a href="https://www.github.com/SuperGoldenMan" target="_blank">
+    <a href="https://www.github.com/sean-anderson-dev" target="_blank">
         <img class="imalinks w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/github.png" alt="github-link">
     </a>
     <a href="mailto:seananderson10@hotmail.co.uk">
@@ -94,7 +94,7 @@
         <a href="https://www.linkedin.com/in/seananderson92/" target="_blank" class="flex justify-center items-center gap-2 mt-5 mb-5 bg-white w-3/4 md:w-1/2 shadow-md shadow-teal-700 p-5 rounded-lg">
             <img class="w-10 h-10 rounded-full" src="img/linkedin.png" alt="linkedin-link">
             <p class="text-center">LinkedIn</p></a>
-        <a href="https://www.github.com/SuperGoldenMan" target="_blank" class="flex justify-center items-center gap-2 mb-5 bg-black w-3/4 md:w-1/2 shadow-md shadow-teal-700 p-5 rounded-lg">
+        <a href="https://www.github.com/sean-anderson-dev" target="_blank" class="flex justify-center items-center gap-2 mb-5 bg-black w-3/4 md:w-1/2 shadow-md shadow-teal-700 p-5 rounded-lg">
             <img class="w-10 h-10 rounded-full" src="img/github.png" alt="github-link">
             <p class="text-white">GitHub</p></a>
         <a href="mailto:seanaderson10@hotmail.co.uk" class="flex justify-center items-center gap-2 mb-5 bg-white w-3/4 md:w-1/2 shadow-md shadow-teal-700 p-5 rounded-lg">
@@ -124,7 +124,7 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Github Actions</div></li>
                 </ul>
-                <a href="https://supergoldenman.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
+                <a href="https://sean-anderson-dev.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
                     <img alt="Detroit Pistons Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/pistons-preview.jpg">
                     </a>
             </div><!-- End of Mobile P's -->
@@ -134,7 +134,7 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://supergoldenman.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://sean-anderson-dev.github.io/pistons-fansite/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>My Detroit Pistons<!-- --> <span class="inline-block">Fansite<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
@@ -164,7 +164,7 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Python</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Pygame</div></li>                   
                 </ul>
-                <a href="https://github.com/SuperGoldenMan/asteroids/" target="_blank" rel="noreferrer noopener" aria-label="asteroids">
+                <a href="https://github.com/sean-anderson-dev/asteroids/" target="_blank" rel="noreferrer noopener" aria-label="asteroids">
                     <img alt="Asteroids Game Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/asteroids.png">
                     </a>
             </div><!-- End of Mobile P's -->
@@ -174,7 +174,7 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://supergoldenman.github.io/asteroids/build/web/index.html" target="_blank" rel="noreferrer noopener" aria-label="asteroids">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://sean-anderson-dev.github.io/asteroids/build/web/index.html" target="_blank" rel="noreferrer noopener" aria-label="asteroids">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>Asteroids<!-- --> <span class="inline-block">Game<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
@@ -201,7 +201,7 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS3</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">JavaScript</div></li>                  
                 </ul>
-                <a href="https://supergoldenman.github.io/rachael-smith/" target="_blank" rel="noreferrer noopener" aria-label="artist-folio">
+                <a href="https://sean-anderson-dev.github.io/rachael-smith/" target="_blank" rel="noreferrer noopener" aria-label="artist-folio">
                     <img alt="Artist Folio Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/artist-preview.jpg">
                     </a>
             </div><!-- End of Mobile P's -->
@@ -211,7 +211,7 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://supergoldenman.github.io/rachael-smith/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://sean-anderson-dev.github.io/rachael-smith/" target="_blank" rel="noreferrer noopener" aria-label="pistons-fansite">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>Artist<!-- --> <span class="inline-block">Portfolio<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
@@ -238,7 +238,7 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">React</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">CSS</div></li>                   
                 </ul>
-                <a href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                <a href="https://github.com/sean-anderson-dev/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
                     <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/todolist.jpg">
                     </a>
             </div><!-- End of Mobile P's -->
@@ -248,7 +248,7 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/sean-anderson-dev/todolist/" target="_blank" rel="noreferrer noopener" aria-label="todolist">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>To Do List<!-- --> <span class="inline-block">App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
@@ -275,7 +275,7 @@
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">Bootstrap</div></li>
                     <li class="mr-1.5"><div class="flex items-center rounded-full bg-black  px-3 py-1 text-xs font-medium leading-5 text-teal-300 ">MongoDB</div></li>
                 </ul>
-                <a href="https://github.com/SuperGoldenMan/messenger/" target="_blank" rel="noreferrer noopener" aria-label="messenger">
+                <a href="https://github.com/sean-anderson-dev/messenger/" target="_blank" rel="noreferrer noopener" aria-label="messenger">
                     <img alt="To Do List App Preview" loading="lazy" w-full class="object-cover" style="color:transparent" src="img/messenger-preview.jpg">
                     </a>
             </div><!-- End of Mobile P's -->
@@ -285,7 +285,7 @@
                 </div>
                 <div class="z-10 sm:order-2 sm:col-span-6">
                     <h3>
-                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/SuperGoldenMan/messenger/" target="_blank" rel="noreferrer noopener" aria-label="messenger">
+                        <a class="inline-flex items-baseline text-3xl text-black hover:text-teal-300 focus-visible:text-teal-300  group/link text-base" href="https://github.com/sean-anderson-dev/messenger/" target="_blank" rel="noreferrer noopener" aria-label="messenger">
                             <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded md:-inset-x-6 md:-inset-y-4 lg:block"></span>
                             <span>Messenger<!-- --> <span class="inline-block">App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transform group-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true"><path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd"></path></svg></span></span>
                         </a> 
