added codepen link to banner

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     <a href="https://www.github.com/sean-anderson-dev" target="_blank">
         <img class="imalinks w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/github.png" alt="github-link">
     </a>
+    <a href="https://www.codepen.io/SGM1992/" target="_blank">
+        <img class="imalinks w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/codepen.png" alt="codepen-link">
+    </a>
     <a href="mailto:seananderson10@hotmail.co.uk">
         <img class="imalinks w-10 h-10 rounded-full hover:scale-110 transition-transform" src="img/email.png" alt="email-link">
     </a>
